*********************************************************************************************
*                                  CHANGE LOG 1.0.0 - > 1.x.x                               *
*********************************************************************************************

  * (4/2/2011) Petr Miko
    # 193
	CHANGED: EDEDB Controller.java is EDEDBController.java now (so name should be more clear).
	ADDED: ControllerTest.java file, which should be in previous commit (my fault).

  * (4/2/2011) Petr Miko
    # 192
	CHANGED: corrected few bugs in EDEDB.
	CHANGED: add JUnit.jar, build.xml edited in order to provide JUnit tests.
	ADDED: test-src folder, ControllerTest.java test file.

  * (4/1/2011) Petr Miko
    # 191
	CHANGED: EDEDClient: new webservice generated files, MTOM now set by getEndpoint.put method instead of properties hash map.
	CHANGED: JERPALang: new translations and corrections in ededb section.
	CHANGED: JERPA - EDEDB section: solved possible connection-error situations (server falls down during file transferm server is not available,...), new source code clearings. New JerpaLang.jar and EDEDClient.jar in lib folder.

  * (4/1/2011) Petr Miko
    # 190
	CHANGED: Fixed "working" bug, when working window was not showing properly.
	CHANGED: few minor changes (buttons visibility bug solved, update methods rewrite in order to be at least a bit more clearer)

  * (3/30/2011) Petr Miko
     # 189
       CHANGED: FileDownload now runnable and is used by executorservice => paralell download applied only on same number of files as CPU has cores.
       CHANGED: solved bug with active/inactive buttons in online/offline view.
       BUG REPORT: everytime file is opened in SignalProcess, perspective bar adds buttons with analyse tools.  

  * (3/29/2011) Petr Miko
     # 188
       CHANGED: ADDED comments in source files related to EDEDB Perspective.

  * (3/28/2011) Petr Miko
     # 187
     